Fix logo alignment

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -36,7 +36,6 @@ header {
 
 	.company-name {
 		font-size: 1.7em;
-		line-height: 0;
 		height: 33px;
 		top: 13px;
 
